@@ -1,5 +1,5 @@
 ######################################################################
-# $Id: FileBackend.pm,v 1.19 2002/04/04 13:28:34 dclinton Exp $
+# $Id: FileBackend.pm,v 1.20 2002/04/07 17:04:46 dclinton Exp $
 # Copyright (C) 2001, 2002 DeWitt Clinton  All Rights Reserved
 #
 # Software distributed under the License is distributed on an "AS
@@ -27,7 +27,7 @@ my $DIRECTORY_MODE = 0777;
 # generated by us or come from user via API, a tautological regex
 # suffices.
 
-my $UNTAINTED_PATH_REGEX = qr{^(.*)$};
+my $UNTAINTED_PATH_REGEX = '^(.*)$';
 
 
 sub new
