@@ -2,6 +2,7 @@ Revision history for Cache
 
 1.02 in progress
  - updated documentation on expiration units
+ - modified the quoting of the untainted path regex
 
 1.01 2002-04-14-01-30
  - released version 1.01
